package usantatecla.connect4.views;

public interface PlayView {

	void showWinner(String color);

}
